--- a/index.css
+++ b/index.css
@@ -1,45 +1,3 @@
-.header {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px;
-  border: 1px solid black;
-}
-.nav-items > ul {
-  list-style-type: none;
-  display: flex;
-}
-.nav-items > ul > li {
-  padding: 10px;
-}
-.logo {
-  width: 100px;
-}
-.card {
-  width: 200px;
-  border: 1px solid black;
-  padding: 10px;
-  margin: 10px;
-}
-.card > img {
-  width: 100%;
-}
-.restaurant-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card {
-  margin: 20px;
-  width: 200px;
-  height: 400px;
-  background-color: #f0f0f0;
-}
-
-.btn {
-  padding: 10px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
